render fish list

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Martins Aquarium</title>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="styles/main.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<div class="header">
@@ -17,9 +17,10 @@
 	</div>
 	<div class="fishTank">
 		<section class="fishList">
-			
 		</section>
 		<section><h2>Tips</h2></section>
 	</div>
+
+	<script type="module" src="js/main.js"></script>
 </body>
 </html>
