--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 		</section>
 		<section><h2>Tips</h2></section>
 	</div>
+	<section class= "LocationList">
+	</section>
+	<section class= "QuotesList"></section>
 
 	<script type="module" src="js/main.js"></script>
 </body>
